[gd_scene load_steps=8 format=3 uid="uid://x4dbnmx5mhsr"]

[ext_resource type="Script" path="res://scripts/new_ui/cache_artifact_display_ui.gd" id="1_53qvj"]
[ext_resource type="Script" path="res://scripts/new_ui/buttons/favorite_artifact_button.gd" id="2_ayr4j"]
[ext_resource type="Texture2D" uid="uid://10j3vlxtldb5" path="res://assets/UI 2D/Icons/Expanded Light Customization/Trash/Trash_White_V2.svg" id="2_yrw4x"]
[ext_resource type="Texture2D" uid="uid://wdxfsqy4011o" path="res://assets/UI 2D/Icons/Favorites/FavoritesUnfavorited_White_V2.svg" id="3_62d3o"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cfp1k"]
bg_color = Color(0.219608, 0.219608, 0.219608, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.141176, 0.141176, 0.141176, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lkqrr"]
bg_color = Color(0.141176, 0.141176, 0.141176, 1)
border_color = Color(0.0627451, 0.0627451, 0.0627451, 1)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5cls3"]
bg_color = Color(0.180392, 0.180392, 0.180392, 1)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[node name="cache_artifact_display" type="MarginContainer"]
custom_minimum_size = Vector2(520, 50)
theme_override_constants/margin_top = 5
script = ExtResource("1_53qvj")

[node name="Panel" type="Panel" parent="."]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_cfp1k")

[node name="HBoxContainer" type="HBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0

[node name="CenterContainer" type="CenterContainer" parent="Panel/HBoxContainer"]
custom_minimum_size = Vector2(320, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/HBoxContainer/CenterContainer"]
layout_mode = 2

[node name="name_label" type="Label" parent="Panel/HBoxContainer/CenterContainer/HBoxContainer"]
layout_mode = 2
text = "Artifact Name"
horizontal_alignment = 1

[node name="size_label" type="Label" parent="Panel/HBoxContainer/CenterContainer/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.588235, 0.588235, 0.588235, 1)
theme_override_font_sizes/font_size = 12
text = "(artifact size)"
vertical_alignment = 2

[node name="CenterContainer2" type="CenterContainer" parent="Panel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="delete_button" type="Button" parent="Panel/HBoxContainer/CenterContainer2"]
self_modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(40, 40)
layout_mode = 2

[node name="CenterContainer" type="CenterContainer" parent="Panel/HBoxContainer/CenterContainer2/delete_button"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="Panel/HBoxContainer/CenterContainer2/delete_button/CenterContainer"]
custom_minimum_size = Vector2(35, 0)
layout_mode = 2
texture = ExtResource("2_yrw4x")
expand_mode = 5

[node name="CenterContainer3" type="CenterContainer" parent="Panel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="favorite_button" type="Button" parent="Panel/HBoxContainer/CenterContainer3"]
self_modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
script = ExtResource("2_ayr4j")
toggled_off_style = SubResource("StyleBoxFlat_lkqrr")
toggled_off_hover_style = SubResource("StyleBoxFlat_5cls3")

[node name="CenterContainer" type="CenterContainer" parent="Panel/HBoxContainer/CenterContainer3/favorite_button"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="Panel/HBoxContainer/CenterContainer3/favorite_button/CenterContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
texture = ExtResource("3_62d3o")
expand_mode = 5

[connection signal="pressed" from="Panel/HBoxContainer/CenterContainer2/delete_button" to="." method="_on_delete_button_pressed"]
